--- a/css.html
+++ b/css.html
@@ -5,7 +5,7 @@
 </p>
 <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
-<p>basic html coding with h1, and p tag</p>
+<p>basic html coding with coloring and text decoration.</p>
 
 
 <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWvQRRj" data-user="student-192377" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
