--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
    <ul> <al"> <li> HTML Basics </li> </a>
 
 
-     <a "> <li> CSS Basics </li> </a>
+     <a 
+"https://Si1entVoice.github.io/Tech-Log/css.html"
+> <li> CSS Basics </li> </a>
 
 
    </ul>
