--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    <ul> <al"> <li> HTML Basics </li> </a>
 
 
-     <a href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
+   <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
 
 
    </ul>
