--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
 
 
    <h2> Table of Contents </h2>
-
-
-   <ul> <al"> <li> HTML Basics </li> </a>
-
-
-   <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
-
+ <ul> <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
+<al"> <li> HTML Basics </li> </a>
+  
 
    </ul>
 
