--- a/html.html
+++ b/html.html
@@ -1,1 +1,17 @@
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWvQRRj" data-user="student-192377" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/student-192377/pen/MWvQRRj">
+  Untitled</a> by Leonardo Garcia (<a href="https://codepen.io/student-192377">@student-192377</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
+<p>Adding header and a article with the &copy code.
+  
+<p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="QWMaaQy" data-user="student-192377" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+  <span>See the Pen <a href="https://codepen.io/student-192377/pen/QWMaaQy">
+  BEM Example</a> by Leonardo Garcia (<a href="https://codepen.io/student-192377">@student-192377</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+
+<p>Making div classes of the card adding the date, address, company, title, and header.</p>
