--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
 
    <h2> Table of Contents </h2>
-  <ul> <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
+  
+  <ul> 
+   
+   <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
+   
   <a Href="https://Si1entVoice.github.io/Tech-Log/html.html"> <li> HTML Basics </li> </a>
   
 
