--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
    <a Href="https://Si1entVoice.github.io/Tech-Log/css.html"> <li> CSS Basics </li> </a>
    
   <a Href="https://Si1entVoice.github.io/Tech-Log/html.html"> <li> HTML Basics </li> </a>
+   
+   <a Href="https://si1entvoice.github.io/Tech-Log/javascript.html"> <li> HTML Basics </li> </a>
   
 
    </ul>
