--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    
   <a Href="https://Si1entVoice.github.io/Tech-Log/html.html"> <li> HTML Basics </li> </a>
    
-   <a Href="https://si1entvoice.github.io/Tech-Log/javascript.html"> <li> HTML Basics </li> </a>
+   <a Href="https://si1entvoice.github.io/Tech-Log/javascript.html"> <li> JAVASCRIPT Basics </li> </a>
   
 
    </ul>
